--- a/style.css
+++ b/style.css
@@ -1,3 +1,73 @@
-div{
-    background-color:#121212;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+  }
+  header {
+    background: #4a90e2;
+    padding: 15px 30px;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    font-size: 22px;
+    font-weight: bold;
+  }
+
+  .nav a{
+    margin-left: 20px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    transition: color 0.3s;
+  }
+  .nav a:hover {
+    color: #ffe082;
+  }
+
+.container{
+    padding : 40px;
+    text-align : center;
+    font-size:20px;
+    color:#333;
+    height:400px;
 }
+
+.issues{
+    margin : 30px auto;
+    display:flex;
+    justify-content : center;
+}
+
+.cards{
+    display:flex;
+    gap:20px;
+}
+.cards div{
+    background: #f5f5f5;
+    padding: 20px 40px;
+    border-radius: 12px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    cursor: pointer;
+}
+
+img{
+    width: 100%;
+    height: 120px;         
+    object-fit: cover;     
+    border-radius: 10px;    
+    margin-bottom: 10px;  
+}
+/* .img{
+    width:147.52px;
+    height:174.67px;
+} */
+
+
